# doctorio

./: pyproject.toml  readme.md
migrations/: env.py
migrations/versions/: 4f385b4c1265_add_customer_and_slots_tables.py  77f8b9931f59_add_tasks.py  879f54af1ebc_add_feedback_table.py  9c70fdb4c701_add_doctors_and_hospitals.py
src/doctorio/: config.py  main.py
src/doctorio/models/: customers.py  doctors.py  feedback.py  slots.py  tasks.py
src/doctorio/views/: customers.py  doctors.py  feedback.py  slots.py  tasks.py
