[tool.poetry]
name = "doctorio"
version = "0.1.0"
description = ""
authors = ["vasyoid <vasyoid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gino = {extras = ["starlette"], version = "^1.0.1"}
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"
alembic = "^1.7.5"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."doctorio.modules"]
"doctors" = "doctorio.views.doctors"
"feedback" = "doctorio.views.feedback"
"customers" = "doctorio.views.customers"
"slots" = "doctorio.views.slots"
"tasks" = "doctorio.views.tasks"
